Gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik
  namespace: riset
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
